[package]
name = "solana_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.10.0"
solana-client = "~1.10.0"
solana-sdk = "~1.10.0"
solana-transaction-status = "~1.10.0"
serde_json = "1.0.59"
serde_bytes = "0.11.5"
serde = "1.0.117"
regex = "1"
neo4rs = "0.5.9"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
kafka = "0.8"
openssl-sys = "0.9.72"
threadpool = "1.3.0"
retry = "1.3.1"
